--- a/Udemy_ASP-Net/Views/Category/Index.cshtml
+++ b/Udemy_ASP-Net/Views/Category/Index.cshtml
@@ -5,9 +5,11 @@
         <div class="col-6">
             <h2 class="text-primary">Category list</h2>
         </div>
-        <div class="col-6">
+        <div class="col-6 text-right">
             <p>
-                Create new
+                <a asp-controller="Category" asp-action="Create" class="btn btn-primary">
+                    Create new category
+                </a>
             </p>
         </div>
     </div>
