--- a/Udemy_ASP-Net/Views/Category/Create.cshtml
+++ b/Udemy_ASP-Net/Views/Category/Create.cshtml
@@ -2,6 +2,7 @@
 
 <form method="post" asp-action="Create">
     <div class="border p-3">
+        @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
         <div class="form-group row">
             <h2 class="text-info pl-3">Add Category</h2>
         </div>
@@ -12,7 +13,8 @@
                         <label asp-for="Name"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Name" class="form-control"/>
+                        <input asp-for="Name" class="form-control" />
+                        <span asp-validation-for="Name" class="text-danger"></span>
                     </div>
 
                 </div>
@@ -22,6 +24,8 @@
                     </div>
                     <div class="col-8">
                         <input asp-for="DisplayOrder" class="form-control" />
+                        <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+
                     </div>
 
                 </div>
@@ -45,4 +49,10 @@
         </div>
     </div>
 </form>
+
+@section Scripts{ 
+    
+    @{ <partial name="_ValidationScriptsPartial" />}
+
+}
 
