--- a/Udemy_ASP-Net/Views/Category/Delete.cshtml
+++ b/Udemy_ASP-Net/Views/Category/Delete.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Udemy_ASP_Net.Models.Category
 
-<form method="post" asp-action="Create">
+<form method="post" asp-action="DeletePost">
+    <input asp-for="Id" hidden>
     <div class="border p-3">
-        @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
         <div class="form-group row">
-            <h2 class="text-info pl-3">Add Category</h2>
+            <h2 class="text-info pl-3">Delete Category</h2>
         </div>
         <div class="row">
             <div class="col-8">
@@ -13,8 +13,7 @@
                         <label asp-for="Name"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
+                        <input asp-for="Name" class="form-control" disabled/>
                     </div>
 
                 </div>
@@ -23,9 +22,7 @@
                         <label asp-for="DisplayOrder"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="DisplayOrder" class="form-control" />
-                        <span asp-validation-for="DisplayOrder" class="text-danger"></span>
-
+                        <input asp-for="DisplayOrder" class="form-control" disabled/>
                     </div>
 
                 </div>
@@ -33,7 +30,7 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                            <input type="submit" class="btn btn-success w-100" value="Create" />
+                            <input type="submit" class="btn btn-danger w-100" value="Delete" />
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-info w-100">
@@ -52,9 +49,11 @@
 
 
 
-@section Scripts{ 
-    
-    @{ <partial name="_ValidationScriptsPartial" />}
+@section Scripts{
+
+    @{
+<partial name="_ValidationScriptsPartial" />
+    }
 
 }
 
