--- a/Udemy_ASP-Net/Views/Category/Edit.cshtml
+++ b/Udemy_ASP-Net/Views/Category/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Udemy_ASP_Net.Models.Category
 
-<form method="post" asp-action="Create">
+<form method="post">
+    <input asp-for="Id" hidden>
     <div class="border p-3">
-        @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
         <div class="form-group row">
-            <h2 class="text-info pl-3">Add Category</h2>
+            <h2 class="text-info pl-3">Edit Category</h2>
         </div>
         <div class="row">
             <div class="col-8">
@@ -33,7 +33,7 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                            <input type="submit" class="btn btn-success w-100" value="Create" />
+                            <input type="submit" class="btn btn-success w-100" value="Update" />
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-info w-100">
@@ -52,9 +52,11 @@
 
 
 
-@section Scripts{ 
-    
-    @{ <partial name="_ValidationScriptsPartial" />}
+@section Scripts{
+
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
 
 }
 
