--- a/Udemy_ASP-Net/Views/Category/Index.cshtml
+++ b/Udemy_ASP-Net/Views/Category/Index.cshtml
@@ -36,6 +36,16 @@
                 <tr>
                     <td width="50%">@cat.Name</td>
                     <td width="30%">@cat.DisplayOrder</td>
+                    <td class="text-center">
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Category" asp-route-Id="@cat.Id" asp-action="Edit" class="btn btn-primary mx-2">
+                                Edit
+                            </a>
+                            <a asp-controller="Category" asp-route-Id="@cat.Id" asp-action="Delete" class="btn btn-danger mx-2">
+                                Delete
+                            </a>
+                        </div>
+                    </td>
                 </tr>
                 }
             </tbody>
