--- a/Udemy_ASP-Net/Views/ApplicationType/Delete.cshtml
+++ b/Udemy_ASP-Net/Views/ApplicationType/Delete.cshtml
@@ -1,9 +1,10 @@
 ﻿@model Udemy_ASP_Net.Models.ApplicationType
 
-<form method="post" asp-action="Create">
+<form method="post" asp-action="DeletePost">
+    <input asp-for="Id" hidden>
     <div class="border p-3">
         <div class="form-group row">
-            <h2 class="text-info pl-3">Add Application Type</h2>
+            <h2 class="text-info pl-3">Delete Application Type</h2>
         </div>
         <div class="row">
             <div class="col-8">
@@ -12,8 +13,7 @@
                         <label asp-for="Name"></label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
+                        <input asp-for="Name" class="form-control" disabled/>
                     </div>
 
                 </div>
@@ -21,7 +21,7 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                            <input type="submit" class="btn btn-success w-100" value="Create" />
+                            <input type="submit" class="btn btn-danger w-100" value="Delete" />
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-info w-100">
@@ -38,9 +38,13 @@
     </div>
 </form>
 
+
+
 @section Scripts{
 
-    @{<partial name="_ValidationScriptsPartial" />}
+    @{
+<partial name="_ValidationScriptsPartial" />
+    }
 
 }
 
