--- a/Udemy_ASP-Net/Views/ApplicationType/Edit.cshtml
+++ b/Udemy_ASP-Net/Views/ApplicationType/Edit.cshtml
@@ -1,9 +1,10 @@
 ﻿@model Udemy_ASP_Net.Models.ApplicationType
 
-<form method="post" asp-action="Create">
+<form method="post">
+    <input asp-for="Id" hidden>
     <div class="border p-3">
         <div class="form-group row">
-            <h2 class="text-info pl-3">Add Application Type</h2>
+            <h2 class="text-info pl-3">Edit Application Type</h2>
         </div>
         <div class="row">
             <div class="col-8">
@@ -21,7 +22,7 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                            <input type="submit" class="btn btn-success w-100" value="Create" />
+                            <input type="submit" class="btn btn-success w-100" value="Update" />
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-info w-100">
@@ -38,9 +39,13 @@
     </div>
 </form>
 
+
+
 @section Scripts{
 
-    @{<partial name="_ValidationScriptsPartial" />}
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
 
 }
 
