--- a/Udemy_ASP-Net/Views/ApplicationType/Index.cshtml
+++ b/Udemy_ASP-Net/Views/ApplicationType/Index.cshtml
@@ -19,24 +19,35 @@
     @if (Model.Any())
     {
 
-        <table class="table table-bordered table-striped" style="width:100%">
-            <thead>
-                <tr>
-                    <th>
-                        Name
-                    </th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var cat in Model)
-                {
-                    <tr>
-                        <td width="50%">@cat.Name</td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+<table class="table table-bordered table-striped" style="width:100%">
+    <thead>
+        <tr>
+            <th>
+                Name
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var cat in Model)
+        {
+            <tr>
+                <td width="50%">@cat.Name</td>
+                <td class="text-center">
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="ApplicationType" asp-route-Id="@cat.Id" asp-action="Edit" class="btn btn-primary mx-2">
+                            Edit
+                        </a>
+                        <a asp-controller="ApplicationType" asp-route-Id="@cat.Id" asp-action="Delete" class="btn btn-danger mx-2">
+                            Delete
+                        </a>
+                    </div>
+                </td>
+            </tr>
+            
+    }
+        </tbody>
+    </table>
     }
     else
     {
