--- a/Udemy_ASP-Net/Views/Shared/_Layout.cshtml
+++ b/Udemy_ASP-Net/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@using Udemy_ASP_Net.Utility
+@inject IHttpContextAccessor HttpContextAccessor 
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -33,6 +37,23 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
                                 <div class="dropdown-divider"></div>
                             </div>
+                        </li>
+                        <li>
+                            @if (HttpContextAccessor.HttpContext.Session.Get<List<ShoppingCart>>(WC.SessionCart) != null)
+                            {
+                                <a asp-action="Index" asp-controller="Cart" class="nav-link">
+                                    @{ 
+                                        var count = HttpContextAccessor.HttpContext.Session.Get<List<ShoppingCart>>(WC.SessionCart).Count;
+                                        <p>Cart (@count)</p>
+                                    }
+                                </a>
+                            }
+                            else
+                            {
+                                <a href="#" class="nav-link">
+                                    <p>Cart (0)</p>
+                                </a>
+                            }
                         </li>
                     </ul>
                 </div>
