--- a/Udemy_ASP-Net/Views/Shared/_Layout.cshtml
+++ b/Udemy_ASP-Net/Views/Shared/_Layout.cshtml
@@ -39,6 +39,8 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="ApplicationType" asp-action="Index">Application type</a>
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
                                 <div class="dropdown-divider"></div>
+                                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Create Admin user</a>
+
                             </div>
                         </li>
                         <li>
