--- a/Udemy_ASP-Net/Views/Shared/_Layout.cshtml
+++ b/Udemy_ASP-Net/Views/Shared/_Layout.cshtml
@@ -31,6 +31,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        @if (User.IsInRole(WC.AdminRole))
+                        {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                                 Content manager
@@ -44,6 +46,7 @@
 
                             </div>
                         </li>
+                        }
                         <li>
                             @if (HttpContextAccessor.HttpContext.Session.Get<List<ShoppingCart>>(WC.SessionCart) != null)
                             {
