Added class libs

--- a/Udemy_ASP-Net/Views/ApplicationType/Create.cshtml
+++ b/Udemy_ASP-Net/Views/ApplicationType/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Udemy_ASP_Net.Models.ApplicationType
+﻿@model Models_Lib.ApplicationType
 
 <form method="post" asp-action="Create">
     <div class="border p-3">
