--- a/Udemy_ASP-Net/Views/ApplicationType/Index.cshtml
+++ b/Udemy_ASP-Net/Views/ApplicationType/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Udemy_ASP_Net.Models.ApplicationType>
+﻿@model IEnumerable<Models_Lib.ApplicationType>
 
 <div class="container">
     <div class="row pt-4">
