--- a/Udemy_ASP-Net/Views/Category/Delete.cshtml
+++ b/Udemy_ASP-Net/Views/Category/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Udemy_ASP_Net.Models.Category
+﻿@model Models_Lib.Category
 
 <form method="post" asp-action="DeletePost">
     <input asp-for="Id" hidden>
