--- a/Udemy_ASP-Net/Views/Category/Index.cshtml
+++ b/Udemy_ASP-Net/Views/Category/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Udemy_ASP_Net.Models.Category>
+﻿@model IEnumerable<Models_Lib.Category>
 
 <div class="container">
     <div class="row pt-4">
