--- a/Udemy_ASP-Net/Views/Product/Index.cshtml
+++ b/Udemy_ASP-Net/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Udemy_ASP_Net.Models.Product>
+﻿@model IEnumerable<Models_Lib.Product>
 
 <div class="container">
     <div class="row pt-4">
