--- a/Udemy_ASP-Net/Views/Product/Upsert.cshtml
+++ b/Udemy_ASP-Net/Views/Product/Upsert.cshtml
@@ -1,4 +1,5 @@
-﻿@model Udemy_ASP_Net.Models.ViewModels.ProductVM
+﻿@model Models_Lib.ViewModels.ProductVM
+@using Utility_Lib
 
 @{ 
     var title = "Create Product";
