--- a/Udemy_ASP-Net/Views/ApplicationType/Edit.cshtml
+++ b/Udemy_ASP-Net/Views/ApplicationType/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Udemy_ASP_Net.Models.ApplicationType
+﻿@model Models_Lib.ApplicationType
 
 <form method="post">
     <input asp-for="Id" hidden>
