--- a/Udemy_ASP-Net/Views/Cart/Summary.cshtml
+++ b/Udemy_ASP-Net/Views/Cart/Summary.cshtml
@@ -1,4 +1,4 @@
-﻿@model Udemy_ASP_Net.Models.ViewModels.ProductUserVM
+﻿@model Models_Lib.ViewModels.ProductUserVM
 
 <form method="post">
     <br />
