--- a/Udemy_ASP-Net/Views/Home/Details.cshtml
+++ b/Udemy_ASP-Net/Views/Home/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model Udemy_ASP_Net.Models.ViewModels.DetailsVM
+﻿@model Models_Lib.ViewModels.DetailsVM
+@using Utility_Lib
 
 <div class="">
     <form method="post">
