--- a/Udemy_ASP-Net/Views/Home/Index.cshtml
+++ b/Udemy_ASP-Net/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Udemy_ASP_Net.Models.ViewModels.HomeVM
+﻿@model Models_Lib.ViewModels.HomeVM
 
 <div class="container">
     <div class="text-center">
