--- a/Udemy_ASP-Net/Views/Product/Delete.cshtml
+++ b/Udemy_ASP-Net/Views/Product/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model Udemy_ASP_Net.Models.Product
+﻿@model Models_Lib.Product
+@using Utility_Lib
 
 <form method="post" enctype="multipart/form-data">
     <input asp-for="Id" hidden>
