--- a/Udemy_ASP-Net/Views/Shared/_IndividualProdCard.cshtml
+++ b/Udemy_ASP-Net/Views/Shared/_IndividualProdCard.cshtml
@@ -1,4 +1,5 @@
-﻿@model Udemy_ASP_Net.Models.Product
+﻿@model Models_Lib.Product
+@using Utility_Lib
 
 <div class="col-lg-4 col-md-6 pb-4 filter @Model.Category.Name.Replace(' ','_')">
     <!-- Card-->
