--- a/Udemy_ASP-Net/Views/Shared/_Layout.cshtml
+++ b/Udemy_ASP-Net/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Http
-@using Udemy_ASP_Net.Utility
+@using Utility_Lib
 @inject IHttpContextAccessor HttpContextAccessor 
 
 <!DOCTYPE html>
