--- a/Udemy_ASP-Net/Views/ApplicationType/Index.cshtml
+++ b/Udemy_ASP-Net/Views/ApplicationType/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Models_Lib.ApplicationType>
 
 <div class="container">
-    <div class="row pt-4">
+    <div class="row pt-4 bg-white">
         <div class="col-6">
             <h2 class="text-primary">Application type list</h2>
         </div>
