--- a/Udemy_ASP-Net/Views/Shared/_Layout.cshtml
+++ b/Udemy_ASP-Net/Views/Shared/_Layout.cshtml
@@ -20,9 +20,11 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Udemy_ASP_Net</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/imgs/tile.png" width="40%" />
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -33,7 +35,7 @@
 
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         @if (User.IsInRole(WC.AdminRole))
                         {
@@ -42,11 +44,11 @@
                                 Content manager
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
-                                <a class="nav-link text-dark" asp-area="" asp-controller="ApplicationType" asp-action="Index">Application type</a>
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Category" asp-action="Index">Category</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="ApplicationType" asp-action="Index">Application type</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Product" asp-action="Index">Product</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Create Admin user</a>
+                                <a class="dropdown-item" asp-area="Identity" asp-page="/Account/Register">Create Admin user</a>
 
                             </div>
                         </li>
@@ -79,9 +81,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - Udemy_ASP_Net - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="border-top footer bg-dark">
+        <div class="container text-white-50">
+            &copy; 2022 - Udemy_ASP_Net
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
